[package]
name = "home"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serenity = { version = "0.12.5", features = ["client", "gateway", "model", "utils"] }
tokio = { version = "1.52.3", features = ["full"] }
